# hycc

./: meson.build  todo.md
docs/sphinx/: expressions.rst  implicit_operators.rst  index.rst  name_lookup.rst  node_relations.dot  operators.rst  overload_resolution.rst  parser.rst  tokenizer.rst  types.rst
include/: sstd.hpp
include/hycc/: ast.hpp  parser.hpp  sstd.hpp  state_pattern_matcher.hpp  tokenizer.hpp
tests/: meson.build  test_ast_nodes.cpp  test_break_statement_node.cpp  test_class_decleration_node.cpp  test_class_scope.cpp  test_continue_statement_node.cpp  test_data_decleration_node.cpp  test_decleration_parsing_node.cpp  test_expression_node.cpp  test_for_loop_statement_node.cpp  test_function_argument_node.cpp  test_function_decleration_node.cpp  test_function_scope.cpp  test_identifier_node.cpp  test_if_statement_node.cpp  test_namespace_decleration_node.cpp  test_nested_scope.cpp  test_ordered_property.cpp  test_parser.cpp  test_return_statement_node.cpp  test_scope_node.cpp  test_sstd.cpp  test_state_pattern_matcher.cpp  test_statement_scope.cpp  test_tokenizer.cpp  test_type_node.cpp  test_unordered_property.cpp
